2003-09-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-text-fragment.c

	Allow clicking beyond the end of the fragment of text, to make it easy to select past the end of a line (bug #121066)
	
	* cong-editor-area-line.c

	Make final subarea of line take remaining horizontal allocation

	* cong-editor-area-composer.c, cong-editor-area-composer.h

	Ability to change child packing after child is added

	--- Version 0.7.4 ---

2003-09-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

	* cong-source-view.c, Makefile.am

	Added syntax highlighting to source view through GtkSourceView.

	* cong-editor-widget3.c
 
	Delete the current selection when typing anything (bug #122719).

2003-09-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c

	Rewrite of 3-year old cursor->left logic (based on work by Amaury Jacquot)
	
	* cong-node.c

	Rewrite of overzealous g_assert that was stopping entities working (cf bug #122967 and about 10 dups)

	* cong-editor-node-entity-decl.c, cong-editor-node-entity-ref.c

	Use of CongEditorAreaStructural to make entity declarations and entity references look funky

	* cong-editor-area-structural-tag.c, cong-editor-area-structural-tag.h

	CongEditorAreaStructuralTag is now a subclass of the new CongEditorAreaStructural, rather than CongEditorAreaBin
	
	* cong-dispspec.c

	Moved hackish GdkGC allocation into a separate routine
	
	* cong-editor-area-structural.h, cong-editor-area-structural.c, Makefile.am

	New files refactoring most of cong-editor-area-structural-tag into a new parent class, now shared with entity code 

2003-09-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

        * cong-menus.c

        Added Ctrl+U keybinding for View Source (bug #123064).

2003-09-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cursor.c

	Applied patch by Raphael Jacquot to make the cursor black for greater visibility
	
	--- Version 0.7.3 ---	

	* Makefile.am

	Added cong-editor-widget.h back
	